[gd_scene load_steps=4 format=3 uid="uid://cpmeouk46x6iy"]

[ext_resource type="Script" path="res://addons/affix.idb/popup_window_on_add.gd" id="1_d2sp1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_51qgy"]
bg_color = Color(0.211521, 0.23888, 0.290166, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4hgr4"]
bg_color = Color(0.145083, 0.168536, 0.203708, 1)

[node name="Window" type="Window"]
title = "Add New Field"
initial_position = 1
size = Vector2i(415, 160)
script = ExtResource("1_d2sp1")

[node name="background" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_51qgy")

[node name="OptionButton" type="OptionButton" parent="background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.2
anchor_right = 0.75
anchor_bottom = 0.2
offset_left = -16.0
offset_top = -10.0
offset_right = 16.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
selected = 0

[node name="Button" type="Button" parent="background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.8
anchor_right = 0.75
anchor_bottom = 0.8
offset_left = -42.5
offset_top = -15.5
offset_right = 42.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_4hgr4")
text = "Add Table"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="item_selected" from="background/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="background/Button" to="." method="_on_button_pressed"]
